[Fix] 자바 버전에 맞게 수정